Added a button for viewing next unprocessed answer

--- a/public/views/partial-view-answers.html
+++ b/public/views/partial-view-answers.html
@@ -141,6 +141,9 @@
 				<span class="glyphicon glyphicon-chevron-right"></span>
 				<span class="glyphicon glyphicon-chevron-right"></span>
 			</button>
+			<button class="btn btn-def-bouvet" ng-click="findNextUnprocessed()" ng-disabled="numberOfUnprocessed <= 0">
+				Next unprocessed
+			</button>
 		</div>
 	</div>
 
