deleted two old views and removed the validation of email, as phone number is also expected to be ok

--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -29,7 +29,7 @@
 						</p>
 						<div class="form-group">
 							<div class="col-sm-offset-4 col-sm-4">
-								<input type="email" class="form-control form-field text-white" name="participantEmail" placeholder="Email" ng-model="participant.email" required ng-maxlength="90">
+								<input class="form-control form-field text-white" name="participantEmail" placeholder="Email" ng-model="participant.email" required ng-maxlength="90">
 							</div>
 						</div>
 						<p ng-show="userForm.participantEmail.$error.maxlength" class="help-block has-error-custom">
