Now registers what prize the participant wants and shows it in the view

--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -40,6 +40,20 @@
 							Vennligst prøv en annen.
 						</p>
 						<br>
+
+						<div class="btn-group-vertical" data-toggle="buttons">
+							<div class="header-question">Ønsket premie:
+							</div>
+							<label class="btn btn-response" name="moto360">
+								<input type="radio" name="prize" value="moto360" ng-model="participant.prize" required make-radio-button-detect-change>Moto360<br>
+							</label>
+							<label class="btn btn-response" name="oculusrift">
+								<input type="radio" name="prize" value="oculusrift" ng-model="participant.prize" required make-radio-button-detect-change>Oculus Rift<br>
+							</label>
+							<br>
+						</div>
+						<br>
+						<br>
 						<div class="form-group">
 							<div class="col-sm-offset-2 col-sm-8">
 								<button type="submit" name="submitButton" class="btn btn-def-bouvet" ng-disabled="userForm.$invalid || duplicateEmail === participant.email">Submit info</button>
