--- a/public/views/partial-view-participants.html
+++ b/public/views/partial-view-participants.html
@@ -31,6 +31,7 @@
 					<tr>
 						<th class="middle-pos">Navn</th>
 						<th class="middle-pos">E-post</th>
+						<th class="middle-pos">Ønsket premie</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -38,6 +39,7 @@
 					answersFromTo:startParticipants:startParticipants + limitParticipants">
 						<td>{{participant.name}}</td>
 						<td>{{participant.email}}</td>
+						<td>{{participant.prize}}</td>
 					</tr>
 				</tbody>
 			</table>
