changed from redirecting to main menu to redirecting to the start of the survey

--- a/public/views/partial-participant-registered.html
+++ b/public/views/partial-participant-registered.html
@@ -11,10 +11,10 @@
 				</div>
 				<br>
 
-					<a href="#/partial-index"class="btn btn-def-bouvet" name="menuButton">
-						<span class="glyphicon glyphicon-home">
+					<a href="#/partial-start"class="btn btn-def-bouvet" name="menuButton">
+						<span class="glyphicon glyphicon-repeat">
 						</span>
-						Tilbake til meny
+						Ny undersøkelse
 					</a>
 					<br><br><br>
 				<div class="logo-bottom-bouvet-absolute"> <img src="./photos/logo1.png"> </div>
