showing the wanted prize of the winners as well

--- a/public/views/partial-view-participants.html
+++ b/public/views/partial-view-participants.html
@@ -100,12 +100,14 @@
 						<tr>
 							<th class="container">Navn</th>
 							<th class="container">E-post</th>
+							<th class="container">Ønsket premie</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="winner in winners">
 							<td>{{winner.name}}</td>
 							<td>{{winner.email}}</td>
+							<td>{{winner.prize}}</td>
 						</tr>
 					</tbody>
 				</table>
