added 'nerd' as option and changed from alder to type

--- a/public/views/partial-view-answers.html
+++ b/public/views/partial-view-answers.html
@@ -27,7 +27,7 @@
 					<th>Id</th>
 					<th>Sivilstatus</th>
 					<th>På hodet</th>
-					<th>Alder</th>
+					<th>Type</th>
 					<th>Studiested</th>
 					<th>Programmeringsstil</th>
 					<th>Musikk</th>
@@ -47,7 +47,7 @@
 					<td>{{answer.id_answers}}</td>
 					<td>{{answer.sivilstatus}}</td>
 					<td>{{answer.pa_hodet}}</td>
-					<td>{{answer.alder}}</td>
+					<td>{{answer.type}}</td>
 					<td>{{answer.studiested}}</td>
 					<td>{{answer.programmeringsstil}}</td>
 					<td>{{answer.musikk}}</td>
