added 'quick and dirty' as an option of programmeringsstil and changed alder to type in the modal, forgotten in prev commit

--- a/public/views/partial-view-answers.html
+++ b/public/views/partial-view-answers.html
@@ -74,7 +74,7 @@
 									<div ng-show="oneAnswer.locked === 0" ng-class="'modal-body text-smaller'">
 										<b>Sivilstatus:</b> {{oneAnswer.sivilstatus}}<br>
 										<b>På hodet: </b> {{oneAnswer.pa_hodet}}<br>
-										<b>Alder: </b> {{oneAnswer.alder}}<br>
+										<b>Type: </b> {{oneAnswer.type}}<br>
 										<b>Studiested: </b> {{oneAnswer.studiested}}<br>
 										<b>Programmeringsstil: </b> {{oneAnswer.programmeringsstil}}<br>
 										<b>Musikk: </b> {{oneAnswer.musikk}}<br>
