changed options of the music question

--- a/public/views/partial-register-answer.html
+++ b/public/views/partial-register-answer.html
@@ -18,7 +18,7 @@
 							<br>
 							<br ng-hide="$last">
 						</div>
-						<br ng-show="col === questions.BsecondCol || col === questions.DfourthCol">
+						<br ng-show="col === questions.DfourthCol">
 					</div>
 				</div>
 			</div>
