changed options of the premier question on register-answer page and register-participant page

--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -50,6 +50,12 @@
 							<label class="btn btn-response" name="oculusrift">
 								<input type="radio" name="prize" value="oculusrift" ng-model="participant.prize" required make-radio-button-detect-change>Oculus Rift<br>
 							</label>
+							<label class="btn btn-response" name="blomster">
+								<input type="radio" name="prize" value="blomster" ng-model="participant.prize" required make-radio-button-detect-change>Blomster<br>
+							</label>
+							<label class="btn btn-response" name="fruktkurv">
+								<input type="radio" name="prize" value="fruktkurv" ng-model="participant.prize" required make-radio-button-detect-change>Fruktkurv<br>
+							</label>
 							<br>
 						</div>
 						<br>
