--- a/public/views/partial-register-answer.html
+++ b/public/views/partial-register-answer.html
@@ -8,7 +8,7 @@
 					<div ng-class="{'col-sm-3 container' : true, 'col-left-border': col === questions.BsecondCol || col === questions.CthirdCol || col === questions.DfourthCol}">	
 						<div ng-repeat="question in col">
 							<div ng-class="{'btn-group-vertical' : true, 'col-bottom-border' : !$last}" id="{{question.name}}" data-toggle="buttons">
-								<div class="header-question">{{question.title}}:</div>
+								<div class="header-question">{{question.title}}:</div><br>
 								<label ng-repeat="option in question.options"class="btn btn-response" name="{{option.value}}">
 									<input type="radio" name="{{question.name}}" value="{{option.value}}" ng-model="formData[question.name]" make-radio-button-detect-change required>{{option.output}}<br>
 								</label>
@@ -18,10 +18,7 @@
 							<br>
 							<br ng-hide="$last">
 						</div>
-						<div ng-show="col === questions.CthirdCol || col === questions.BsecondCol">
-							<br><br>
-						</div>
-						<br ng-show="col === questions.BsecondCol">
+						<br ng-show="col === questions.DfourthCol">
 					</div>
 				</div>
 			</div>
