--- a/public/views/partial-view-answers.html
+++ b/public/views/partial-view-answers.html
@@ -9,9 +9,10 @@
 				</a>
 			</div>
 						
-			<div class="col-sm-2 col-sm-offset-2 text-smaller text-white top-pad-small">
+			<div class="col-sm-2 col-sm-offset-2 text-smaller text-white top-pad-small" ng-show="viewAll">
 				Totalt antall svar: {{answers.length}}
 			</div>
+			<div class="col-sm-4" ng-hide="viewAll"></div>
 			<div class="col-sm-3 text-smaller text-white top-pad-small">
 				Antall ubehandlede svar: {{numberOfUnprocessed}}
 			</div>
@@ -123,29 +124,32 @@
 
 
 	<div class="row">
-		<div class="col-sm-6 col-sm-offset-1">
+		<div class="col-sm-8 col-sm-offset-1">
 			<!--a button that triggers a modal to confirm that you want to delete all answers -->
 			<button class="btn btn-def-bouvet" name="deleteAnswers" data-toggle="modal" data-target="#confirmDeleteModal" >
 				<span class="glyphicon glyphicon-trash">
 				</span>
 				Slett alle svar
 			</button>
-			<button class="btn btn-def-bouvet" ng-click="findNextUnprocessed()" ng-disabled="numberOfUnprocessed <= 0">
+			<button class="btn btn-def-bouvet" ng-click="findNextUnprocessed()" ng-disabled="numberOfUnprocessed <= 0" ng-show="viewAll">
 				Se neste ubehandlede
+			</button>
+			<button class="btn btn-def-bouvet" ng-click="toggleViewAll()">
+				<span ng-show="viewAll">Se bare ubehandlede</span>
+				<span ng-hide="viewAll">Se alle</span>
 			</button>
 		</div>
 		
-		<div class="col-sm-5">
+
+		<div class="col-sm-3">
 			<button class="btn btn-def-bouvet" ng-click="tenFirstAnswers()" ng-disabled="startAnswers <= 0">
 				<span class="glyphicon glyphicon-chevron-left"></span>
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</button>
 			<button class="btn btn-def-bouvet" ng-click="tenPrevAnswers()" ng-disabled="startAnswers <= 0">
 				<span class="glyphicon glyphicon-chevron-left"></span>
-				10 forrige
 			</button>
 			<button class="btn btn-def-bouvet" ng-click="tenNextAnswers()" ng-disabled="startAnswers >= answers.length - 10">
-				10 neste
 				<span class="glyphicon glyphicon-chevron-right"></span>
 			</button>
 			<button class="btn btn-def-bouvet" ng-click="tenLastAnswers()" ng-disabled="startAnswers >= answers.length - 10">
