--- a/public/views/partial-view-participants.html
+++ b/public/views/partial-view-participants.html
@@ -62,7 +62,7 @@
 			</button>
 		</div>
 
-		<div class="col-sm-5">
+		<div class="col-sm-3 col-sm-offset-2">
 			<div class="row">
 				<div class="col-sm-12">
 					<button class="btn btn-def-bouvet" ng-click="tenFirstParticipants()" ng-disabled="startParticipants <= 0">
@@ -71,9 +71,8 @@
 					</button>
 					<button class="btn btn-def-bouvet" ng-click="tenPrevParticipants()" ng-disabled="startParticipants <= 0">
 						<span class="glyphicon glyphicon-chevron-left"></span>
-						10 forrige</button>
+					</button>
 					<button class="btn btn-def-bouvet" ng-click="tenNextParticipants()" ng-disabled="startParticipants >= participants.length - 10">
-						10 neste
 						<span class="glyphicon glyphicon-chevron-right"></span>
 					</button>
 					<button class="btn btn-def-bouvet" ng-click="tenLastParticipants()" ng-disabled="startParticipants >= participants.length - 10">
