cleaned up the html files a bit: indentation, a few comments and readability

--- a/public/views/partial-participant-registered.html
+++ b/public/views/partial-participant-registered.html
@@ -1,21 +1,26 @@
-	<div class="middle-pos">
+<div class="middle-pos">
 
-			<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
-			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
-			<p class="text-white text-smaller">Vakkert i seg selv. Viktig for den det gjelder.</p>
+	<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
+	<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+	<p class="text-white text-smaller">Vakkert i seg selv. Viktig for den det gjelder.</p>
 
-			<br><br><br>
-			<div class="text-white text-smaller">
-				<p>	Takk for din påmelding! </p>
-				<p> Du vil bli kontaktet på din epostadresse hvis du vinner. </p>
-				</div>
-				<br>
+	<br><br><br>
 
-					<a href="#/partial-start"class="btn btn-def-bouvet" name="menuButton">
-						<span class="glyphicon glyphicon-repeat">
-						</span>
-						Ny undersøkelse
-					</a>
-					<br><br><br>
-				<div class="logo-bottom-bouvet-absolute"> <img src="./photos/logo1.png"> </div>
-			</div>
+	<div class="text-white text-smaller">
+		<p>	Takk for din påmelding! </p>
+		<p> Du vil bli kontaktet på din epostadresse hvis du vinner. </p>
+	</div>
+	<br>
+
+	<a href="#/partial-start"class="btn btn-def-bouvet" name="menuButton">
+		<span class="glyphicon glyphicon-repeat">
+		</span>
+		Ny undersøkelse
+	</a>
+
+	<br><br><br>
+
+	<div class="logo-bottom-bouvet-absolute">
+		<img src="./photos/logo1.png">
+	</div>
+</div>
