Changed questions to be up to date with the latest change requests: 	- Removed everything about prize, both in question and participant pages 	- Changed options and name of studiested to utdannelse 	- Added option for hype-preferanse

--- a/public/views/partial-register-answer.html
+++ b/public/views/partial-register-answer.html
@@ -21,10 +21,9 @@
 					<br>
 					<br ng-hide="$last">
 				</div>
-				<div ng-show="col === questions.CthirdCol || col === questions.BsecondCol">
-					<br><br>
+				<div ng-show="col === questions.DfourthCol">
+					<br><br><br><br><br>
 				</div>
-				<br ng-show="col === questions.BsecondCol">
 			</div>
 		</div>
 	</div>
