--- a/public/views/partial-view-answers.html
+++ b/public/views/partial-view-answers.html
@@ -174,6 +174,14 @@
 		</div>
 	</div>
 
+	<div class="row">
+		<div class="col-sm-3 col-sm-offset-1">
+			<button class="btn btn-def-bouvet" name="exportAnswers" ng-click="exportAnswers()" >
+				Eksporter svar
+			</button>
+		</div>
+	</div>
+
 		<!--a modal that wants you to confirm that you want to delete all answers -->
 		<div class="modal" id="confirmDeleteModal" role="dialog" aria-hidden="true">
 			<div class="modal-dialog modal-sm">
