Added a filter for prettier printing of the values from the DB in the view of the answers. Puts the answers through a switch-case to give them the correct string value suitable for showing users. Also changed the ip to a new host for testing out the wireless network provided, and changed from "epostadresse" to "kontaktinfo" in the page shown after registering a participant

--- a/public/views/partial-participant-registered.html
+++ b/public/views/partial-participant-registered.html
@@ -8,7 +8,7 @@
 
 	<div class="text-white text-smaller">
 		<p>	Takk for din påmelding! </p>
-		<p> Du vil bli kontaktet på din epostadresse hvis du vinner. </p>
+		<p> Du vil bli kontaktet kontaktinformasjonen du har oppgitt hvis du vinner. </p>
 	</div>
 	<br>
 
