buttons for export to file download dialog

--- a/public/views/partial-view-participants.html
+++ b/public/views/partial-view-participants.html
@@ -52,6 +52,8 @@
 				</span>
 				Slett alle deltakere
 			</button>
+			
+			<a href="/exportParticipants" class="btn btn-def-bouvet" download>Eksporter deltagere</a>
 	
 			<button class="btn btn-def-bouvet" name="pickWinner" ng-click="pickWinner()">
 				<span class="glyphicon glyphicon-star-empty">
@@ -120,10 +122,18 @@
 					</span>
 					Slett vinnere
 				</button>
+				
 			</div>
 		</div>
-	</div>
+		
+		
+		
+			
+		
 
+		
+	</div>
+	
 
 		<!-- the modal that wants you to confirm that you want to delete all participants in the database -->
 		<div class="modal" id="confirmDeleteParticipantsModal" role="dialog" aria-hidden="true">
