--- a/public/views/partial-view-answers.html
+++ b/public/views/partial-view-answers.html
@@ -176,9 +176,7 @@
 
 	<div class="row">
 		<div class="col-sm-3 col-sm-offset-1">
-			<button class="btn btn-def-bouvet" name="exportAnswers" ng-click="exportAnswers()" >
-				Eksporter svar
-			</button>
+			<a href="/exportAnswers" class="btn btn-def-bouvet" download>Eksporter svar</a>
 		</div>
 	</div>
 
