removed the prettyString filter from id of answers in answers view, was added as a mistake

--- a/public/views/partial-view-answers.html
+++ b/public/views/partial-view-answers.html
@@ -53,7 +53,7 @@
 				danger : answer.processed === 0 && answer.locked === 0, 
 				success : answer.processed === 1 && answer.locked === 0
 				}">
-					<td>{{answer.id_answers | prettyString}}</td>
+					<td>{{answer.id_answers}}</td>
 					<td>{{answer.kjonn | prettyString}}</td>
 					<td>{{answer.sivilstatus | prettyString}}</td>
 					<td>{{answer.utdannelse | prettyString}}</td>
