fixed downloading of exported csv-files to tablet by changing application type set in header

--- a/public/views/partial-view-answers.html
+++ b/public/views/partial-view-answers.html
@@ -140,7 +140,7 @@
 			<button class="btn btn-def-bouvet" name="deleteAnswers" data-toggle="modal" data-target="#confirmDeleteModal" >
 				<span class="glyphicon glyphicon-trash">
 				</span>
-				Slett alle svar
+				Slett alle
 			</button>
 
 			<button class="btn btn-def-bouvet" ng-click="findNextUnprocessed()" ng-disabled="numberOfUnprocessed <= 0" ng-show="viewAll">
@@ -176,7 +176,7 @@
 
 	<div class="row">
 		<div class="col-sm-3 col-sm-offset-1">
-			<a href="/exportAnswers" class="btn btn-def-bouvet" download>Eksporter svar</a>
+			<a href="/exportAnswers" class="btn btn-def-bouvet" download>Eksporter</a>
 		</div>
 	</div>
 
