--- a/public/views/partial-view-participants.html
+++ b/public/views/partial-view-participants.html
@@ -50,10 +50,10 @@
 			<button class="btn btn-def-bouvet" name="deleteParticipants" data-toggle="modal" data-target="#confirmDeleteParticipantsModal" >
 				<span class="glyphicon glyphicon-trash">
 				</span>
-				Slett alle deltakere
+				Slett alle
 			</button>
 			
-			<a href="/exportParticipants" class="btn btn-def-bouvet" download>Eksporter deltagere</a>
+			<a href="/exportParticipants" class="btn btn-def-bouvet" download>Eksporter</a>
 	
 			<button class="btn btn-def-bouvet" name="pickWinner" ng-click="pickWinner()">
 				<span class="glyphicon glyphicon-star-empty">
