--- a/public/views/partial-view-participants.html
+++ b/public/views/partial-view-participants.html
@@ -30,7 +30,7 @@
 				<thead>
 					<tr>
 						<th class="middle-pos">Navn</th>
-						<th class="middle-pos">E-post</th>
+						<th class="middle-pos">Kontaktinfo</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -102,7 +102,7 @@
 					<thead>
 						<tr>
 							<th class="container">Navn</th>
-							<th class="container">E-post</th>
+							<th class="container">Kontaktinfo</th>
 						</tr>
 					</thead>
 					<tbody>
