--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -31,7 +31,7 @@
 		</p>
 		<div class="form-group">
 			<div class="col-sm-offset-4 col-sm-4">
-				<input class="form-control form-field text-white" name="participantEmail" placeholder="Email eller telefonnummer" ng-model="participant.email" required ng-maxlength="90" ng-pattern="/^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}$|^[0-9]{8}$/">
+				<input type="email" class="form-control form-field text-white" name="participantEmail" placeholder="Email eller telefonnummer" ng-model="participant.email" required ng-maxlength="90" ng-pattern="/^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}$|^[0-9]{8}$/">
 			</div>
 		</div>
 		<p ng-show="userForm.participantEmail.$error.maxlength" class="help-block has-error-custom">
@@ -42,7 +42,7 @@
 			Vennligst prøv en annen.
 		</p>
 		
-		<p ng-show="userForm.participantEmail.$dirty && userForm.participantEmail.$invalid"
+		<p ng-show="userForm.participantEmail.$dirty && userForm.participantEmail.$error.pattern"
 		
 		class="help-block has-error-custom">
 			Kontaktinformasjonen må inneholde enten telefonnr eller epost
@@ -52,7 +52,10 @@
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-8">
 				<button type="submit" name="submitButton" class="btn btn-def-bouvet" ng-disabled="
-				(userForm.$invalid || duplicateEmail === participant.email) || userForm.participantEmail.$invalid
+				(userForm.participantName.$invalid 
+				|| duplicateEmail === participant.email 
+				|| userForm.participantEmail.$error.pattern 
+				|| userForm.participantEmail.$error.required)
 				">Submit info</button>
 			</div>
 		</div>
