Visualization of data

--- a/public/views/partial-index.html
+++ b/public/views/partial-index.html
@@ -26,4 +26,14 @@
 			Se alle deltakere
 		</a>
 	</div>
+	
+	<br>
+	
+	<!--a button that takes you to a page that displays all the participants in the database -->
+	<div>
+		<a href="#/visualize" name="seeAllAnswersVisual" class="btn btn-def-bouvet btn-block btn-front-large">
+			<span class="glyphicon glyphicon-user"></span>
+			Se svarene visualisert
+		</a>
+	</div>
 </div>
