added visualization of the most recent answer

--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -69,5 +69,13 @@
 		</a>
 		<br>
 	</div>
-			
+
+
+	<br><br><br><br>
+
+	<div>
+		<a href="#/visualize-single" name="visualiser" class="btn btn-def-bouvet">
+			Se visualisering
+		</a>
+	</div>
 </div>
