removed draw button on single-visualisation screen, some color fixes, cleanup

--- a/public/views/partial-view-answersvisual-single.html
+++ b/public/views/partial-view-answersvisual-single.html
@@ -1,16 +1,19 @@
 <div class="container-fluid">
-	<div class="btn btn-def-bouvet" ng-click="broadcast()" ng-hide="broadcasted">
-		Draw
-	</div>
-	<div>
+	
+	<div class="row top-pad-medium bottom-pad-small">
+	
+
+	<div class="col-sm-2 col-sm-offset-2">
 		<a href="#/partial-register-participant" name="menuButton" class="btn btn-def-bouvet">
 			<span class="glyphicon glyphicon-home">
 			</span>
 			Tilbake
 		</a>
 	</div>
+	
+	</div>
 		
-			<style>
+	<style>
 		    .container-canvas {
 		        /* This could be done in one single declaration. See the extended sample. */
 		        margin-right: auto;
@@ -23,7 +26,9 @@
 			            width: 100%;
 			           
 			        }
-		</style>
+	</style>
+	
+
 			
 		<div class="container-canvas">
 		    <canvas drawing id="mycanvas" width="800" height="480"></canvas>
