changed title, and some visual cleanup

--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -2,10 +2,10 @@
 
 
 <div class="container middle-pos">	
-	<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
+	<h2 class="text-orange text-large top-pad">The beauty of data</h2>
 	<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 	<p class="text-white text-smaller">Vakkert i seg selv. Viktig for den det gjelder.</p>
-	
+	<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 	<br>
 
 	<div class="text-white">
