--- a/public/views/partial-view-answersvisual-single.html
+++ b/public/views/partial-view-answersvisual-single.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid middle-pos">
 	
 	<div class="row top-pad-medium bottom-pad-small">
 	
@@ -11,8 +11,14 @@
 		</a>
 	</div>
 	
+		<h2 class="text-orange text-large top-pad">The beauty of data</h2>
+		<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+		<p class="text-white text-smaller">Vakkert i seg selv. Viktig for den det gjelder.</p>	
+		<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+
+	
 	</div>
-		
+	
 	<style>
 		    .container-canvas {
 		        /* This could be done in one single declaration. See the extended sample. */
