--- a/public/views/partial-view-answersvisual.html
+++ b/public/views/partial-view-answersvisual.html
@@ -1,6 +1,7 @@
-<div class="container-fluid">
+<div class="container middle-pos">
 	
 	<div class="row top-pad-medium bottom-pad-small">
+		
 			<!--a button that takes you back to the menu -->
 			<div class="col-sm-2 col-sm-offset-1">
 				<a href="#/partial-index.html" name="menuButton" class="btn btn-def-bouvet">
@@ -12,8 +13,14 @@
 			
 			<div class="col-sm-2 col-sm-offset-2 text-smaller text-white top-pad-small">
 				Totalt antall svar: {{answers.length}}
-			</div>			
-	</div>		
+			</div>	
+			<br/>
+			<h2 class="text-orange text-large top-pad">The beauty of data</h2>
+			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+			<p class="text-white text-smaller">Vakkert i seg selv. Viktig for den det gjelder.</p>	
+			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>	
+	</div>	
+	
 	
 	<style>
 	    .container-canvas {
