--- a/public/views/partial-participant-registered.html
+++ b/public/views/partial-participant-registered.html
@@ -1,8 +1,9 @@
 <div class="middle-pos">
 
-	<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
+	<h2 class="text-orange text-large top-pad">The beauty of data</h2>
 	<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 	<p class="text-white text-smaller">Vakkert i seg selv. Viktig for den det gjelder.</p>
+	<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 
 	<br><br><br>
 
