--- a/public/views/partial-start.html
+++ b/public/views/partial-start.html
@@ -1,8 +1,8 @@
 <div class="container middle-pos">
-	<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
+	<h2 class="text-orange text-large top-pad">The beauty of data</h2>
 	<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 	<p class="text-white text-smaller">Vakkert i seg selv. Viktig for den det gjelder.</p>
-
+	<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 	<!-- a button taking you to the page for registering answer-->
 	<div>
 		<a href="#/partial-register-answer" name="startButton" class="btn btn-def-bouvet btn-start">
