--- a/public/views/partial-index.html
+++ b/public/views/partial-index.html
@@ -1,4 +1,4 @@
-<div class="container-fluid btn-group-custom body-bouvet">
+<div class="container-fluid middle-pos btn-group-custom body-bouvet">	
 	<!--a button that takes you the page where all the answers in the database are displayed -->
 	<div>
 		<a href="#/partial-view-answers" name="seeAllAnswers" class="btn btn-def-bouvet btn-block btn-front-large">
